Fix testimonials title unalignment

--- a/source/stylesheets/components/_home-block.scss
+++ b/source/stylesheets/components/_home-block.scss
@@ -12,8 +12,8 @@
   @media screen and (min-width: breakpoint('tablet')) {
     flex-wrap: wrap;
     max-width: none;
-    margin-right: 1rem;
-    margin-left: 1rem;
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 
